@@ -27,7 +27,7 @@
 		"typo3/cms-scheduler": "^13 || ^14",
 		"typo3/coding-standards": "^0.8.0",
 		"friendsofphp/php-cs-fixer": "^3",
-		"phpunit/phpunit": "^10",
+		"phpunit/phpunit": "^11",
 		"phpstan/phpstan": "^2",
 		"ext-zip": "*",
 		"ext-libxml": "*",
